[gd_scene load_steps=6 format=3 uid="uid://dc41l72k3ujh7"]

[ext_resource type="Script" path="res://scenes/toolbox/examples/root/2d/controls/drag-and-drop/simple-drag-and-drop/drop-zone/drop-zone.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0.0705882, 0.0705882, 0.0705882, 0.6)
shadow_size = 5

[sub_resource type="Curve" id="Curve_pb8lt"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_cibo6"]
curve = SubResource("Curve_pb8lt")

[sub_resource type="ParticleProcessMaterial" id="4"]
emission_shape = 3
emission_box_extents = Vector3(123, 0, 1)
direction = Vector3(0, 0, 0)
gravity = Vector3(0, -98, 0)
scale_min = 6.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_cibo6")
color = Color(0, 1, 0.623529, 1)

[node name="DropZone" type="PanelContainer"]
self_modulate = Color(0.137255, 0.137255, 0.137255, 1)
custom_minimum_size = Vector2(256, 256)
offset_right = -768.0
offset_bottom = -344.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("1")
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ParticleContainer" type="Node2D" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="ParticleContainer"]
position = Vector2(126, 250)
emitting = false
amount = 64
process_material = SubResource("4")
lifetime = 2.0
one_shot = true
explosiveness = 0.34

[node name="TimerContainer" type="Node2D" parent="."]

[node name="ParticleTimer" type="Timer" parent="TimerContainer"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="TimerContainer/ParticleTimer" to="." method="_on_ParticleTimer_timeout"]
